# SHIFT-61548

./: .dockerignore  Dockerfile  README.md  config.py  database.db  main.py  pyproject.toml  pytest.ini  requirements.txt
auth/: auth_routes.py  auth_tools.py
database/: db_model.py  db_tools.py  first_time_init.py
tests/: conftest.py  test_auth.py  test_user.py
user/: user_routes.py
