[tool.poetry]
name = "shift-61548"
version = "0.1.0"
description = ""
authors = ["Gayrat Saidakhmedov <gayrat.post@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.30"
bcrypt = "^4.1.3"
pyjwt = "^2.8.0"
pytest = "^8.2.0"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
